cmake_minimum_required(VERSION 3.27)
project(injeUniv_OOP)

set(CMAKE_CXX_STANDARD 17)

add_executable(injeUniv_OOP src/HelloWorld.cpp
        src/3week/3-1.cpp
        src/3week/3-2.cpp
        src/3week/3-3.cpp
        src/3week/3-4.cpp
        src/3week/3-5.cpp
        src/3week/3-6.cpp
        src/3week/3-7.cpp
        src/3week/3-8.cpp
        src/3week/3-9.cpp
        src/3week/3-10.cpp
        src/4week/4-1.cpp
        src/4week/referenceWrapperRefCref.cpp
        src/4week/uniquePtr.cpp)
